Close meta tag.

--- a/server/public/index.htm
+++ b/server/public/index.htm
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>GPS Tracker</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.css" />
 		<script src="http://code.jquery.com/jquery.js"></script>
 		<script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.js"></script>
