First 'working' version of GPS tracker =)

--- a/PersonalTimeTracker/index.html
+++ b/PersonalTimeTracker/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Personal time tracker by team number one</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0-rc.1/jquery.mobile-1.1.0-rc.1.min.css" />
-		<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-		<script src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
-		<script src="http://documentcloud.github.com/backbone/backbone-min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.1.0-rc.1/jquery.mobile-1.1.0-rc.1.min.js"></script>
-		<script src="scripts.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+		<script type="text/javascript" src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
+		<script type="text/javascript" src="http://documentcloud.github.com/backbone/backbone-min.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/mobile/1.1.0-rc.1/jquery.mobile-1.1.0-rc.1.min.js"></script>
+		<script type="text/javascript" src="scripts.js"></script>
 		
 	</head>
 	<body>
@@ -20,7 +20,7 @@
 			<div class="content" data-role="content">
 				<a href="#" data-role="button">
                     Task name
-					</a>
+				</a>
 					
 			</div>
 			<footer data-role="footer">
@@ -32,24 +32,22 @@
 				<h1>Personal time tracker</h1>
 			</header>
 			<div class="content" data-role="content">
+				<div data-role="collapsible" data-split-theme="a">
+					<h3>Task name</h3>
+					<p>Average: 432</p>
+					<p>Total: 5454</p>
+				</div>
 
-
-					<div data-role="collapsible" data-split-theme="a">
-						<h3>Task name</h3>
-						<p>Average: 432</p>
-						<p>Total: 5454</p>
-					</div>
-
-					<div data-role="collapsible" data-split-theme="a">
-						<h3>Task name</h3>
-						<p>Average: 432</p>
-						<p>Total: 5454</p>
-					</div>
-					<div data-role="collapsible" data-split-theme="a">
-						<h3>Task name</h3>
-						<p>Average: 432</p>
-						<p>Total: 5454</p>
-					</div>
+				<div data-role="collapsible" data-split-theme="a">
+					<h3>Task name</h3>
+					<p>Average: 432</p>
+					<p>Total: 5454</p>
+				</div>
+				<div data-role="collapsible" data-split-theme="a">
+					<h3>Task name</h3>
+					<p>Average: 432</p>
+					<p>Total: 5454</p>
+				</div>
 					
 			</div>
 			<footer data-role="footer">
