--- a/server/public/selftest.html
+++ b/server/public/selftest.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Test</title>
 		<link rel="stylesheet" href="selftest/external/jasmine/jasmine.css" />
+		<script type="text/javascript" src="jquery.js"></script>
 		<script src="selftest/selftest.js"></script>
 
 		<script>
