Add "tracker.css" to the self-test, and fixed the style-sheet.

--- a/server/public/selftest.html
+++ b/server/public/selftest.html
@@ -18,6 +18,7 @@
 			SelfTest.registerFiles([
 				// All files that should work, with additional JSLint settings
 				{"file": "index.html", "jslint": SelfTest.JSLINT_OPTIONS_BROWSER},
+				{"file": "tracker.css", "jslint": SelfTest.JSLINT_OPTIONS_BROWSER},
 				{"file": "tracker.js", "jslint": jslintGoogleMaps},
 				{"file": "selftest.html", "jslint": jslintSelftest}
 				// You cannot test the selftest itself: "selftest/selftest.js"
