Some more fixes to debugging coordinates... Now limiting amount of coordinates actually works =)

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -28,7 +28,10 @@
 			<div class="content">
 				<a id="toggleTracking" href="#">Start/Stop tracking</a>
 				<div id="map_canvas"></div>
-				<div id="coords"></div>				
+				<div id="coordsBox">
+					<h3>Coordinates (debugging purposes)</h3>
+					<div id="coords"></div>
+				</div>
 			</div>
 			<footer>
 				<h6></h6>
