Added settings-button and -dialog

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -24,7 +24,11 @@
 	<div id="main" data-role="page" data-theme="b">
 		<header data-role="header">
 			<h1>
-				GPS Tracker</h1>
+				GPS Tracker
+			</h1>
+			<a href="#settingsDialog" data-role="button" data-rel="dialog" data-icon="gear" class="ui-btn-right">
+				Settings
+			</a>
 		</header>
 		<div class="content" data-role="content">
 			<div class="ui-grid-a">
@@ -45,6 +49,22 @@
 				<p id="coords">
 				</p>
 			</div>
+		</div>
+		<footer data-role="footer">
+			<h6>
+				&copy; Team 1
+			</h6>
+		</footer>
+	</div>
+	
+	<div id="settingsDialog" data-role="page" data-add-back-btn="true">
+		<header data-role="header">
+			<h1>Settings</h1>
+		</header>
+		<div class="content" data-role="content">
+			<p>
+				TODO: Change settings here
+			</p>
 		</div>
 		<footer data-role="footer">
 			<h6>
