Add an initial prototype object for tracks.

--- a/server/public/selftest.html
+++ b/server/public/selftest.html
@@ -20,6 +20,7 @@
 				{"file": "index.html", "jslint": SelfTest.JSLINT_OPTIONS_BROWSER},
 				{"file": "tracker.js", "jslint": jslintGoogleMaps},
 				{"file": "api/gps.js", "jslint": {"vars": true, "predef": ["GpsApi", "console"]}},
+				{"file": "api/track.js", "jslint": {"vars": true, "predef": ["GpsApi", "Track", "console"]}},
 				// {"file": "status.html", "jslint": SelfTest.JSLINT_OPTIONS_BROWSER},
                 {"file": "selftest.html", "jslint": jslintSelftest}
 				// You cannot test the selftest itself: "selftest/selftest.js"
