--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,76 +1,135 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>GPS Tracker</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css"
-		type="text/css" />
-	<link rel="stylesheet" href="tracker.css" type="text/css" />
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.js"></script>
-	<script type="text/javascript" src="tracker.js"></script>
-	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-	<script type="text/javascript">
-		'use strict';
-		$(document).ready(function () {
-			tracker.initializeMap("map_canvas", 60.186652, 24.82187, { debugCoordinates: $("#coords") });
-			$('#toggleTracking').click(function () {
-				tracker.toggleTracking();
+	<head>
+		<title>GPS Tracker</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css"
+		      type="text/css" />
+		<link rel="stylesheet" href="tracker.css" type="text/css" />
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.js"></script>
+		<script type="text/javascript" src="tracker.js"></script>
+		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+		<script type="text/javascript">
+			'use strict';
+			$(document).ready(function () {
+				try {
+					window.tracker.initializeMap("map_canvas", 60.186652, 24.82187,
+						{
+							statusDom: $('#trackerStatus'),
+							debugCoordinates: $("#coords"),
+							routeLineOpts: {
+								strokeColor: "#0000FF",
+								strokeOpacity: 1.0,
+								strokeWeight: 6
+							}
+						});
+				} catch (err) {
+					window.alert('Error on init: ' + err.message); // Windows Phone Emulator JavaScript doesn't like tracker var...
+				}
+				$('#toggleTracking').click(function () {
+					tracker.toggleTracking();
+				});
+				$('#togggleTest').click(function () {
+					tracker.toggleTestDraw();
+				});
 			});
-		});
-	</script>
-</head>
-<body>
-	<div id="main" data-role="page" data-theme="b">
-		<header data-role="header">
-			<h1>
-				GPS Tracker
-			</h1>
-			<a href="#settingsDialog" data-role="button" data-rel="dialog" data-icon="gear" class="ui-btn-right">
-				Settings
-			</a>
-		</header>
-		<div class="content" data-role="content">
-			<div class="ui-grid-a">
-				<div class="ui-block-a">
-					<a id="toggleTracking" href="#" data-role="button">Start/Stop</a>
+		</script>
+	</head>
+	<body>
+		<div id="main" data-role="page" data-theme="b">
+			<header data-role="header">
+				<h1>
+					GPS Tracker
+				</h1>
+				<a href="#settingsDialog" data-role="button" data-rel="dialog" data-icon="gear" class="ui-btn-right">
+					Settings
+				</a>
+			</header>
+			<div class="content" data-role="content">
+				<div class="ui-grid-a">
+					<div class="ui-block-a">
+						<a href="#statusPage" data-role="button" data-transition="flip">Status</a>
+					</div>
+					<div class="ui-block-b">
+						<a href="#" data-role="button">Sth else</a>
+					</div>
 				</div>
-				<div class="ui-block-b">
-					<p id="trackingStatus" class="ui-corner-all">
-						Not tracking.
-					</p>
+				<div class="ui-grid-a">
+					<div class="ui-block-a">
+						<a id="toggleTracking" href="#" data-role="button">Start/Stop</a>
+					</div>
+					<div class="ui-block-b">
+						<p id="trackingStatus" class="ui-corner-all">
+							Not tracking.
+						</p>
+					</div>
+				</div>
+				<div id="map_canvas">
+				</div>
+				<div id="coordsBox" data-role="collapsible" data-theme="a">
+					<h3>
+						Coordinates (debugging purposes)
+					</h3>
+					<div>
+						<a id="togggleTest" data-role="button">Test route drawing (spiral)</a>
+						<p id="coords"></p>
+					</div>
 				</div>
 			</div>
-			<div id="map_canvas">
+			<footer data-role="footer">
+				<h6>
+					&copy; Team 1
+				</h6>
+			</footer>
+		</div>
+
+		<div id="statusPage" data-role="page" data-theme="b">
+			<header data-role="header">
+				<a href="#main" data-role="button" data-direction="reverse" class="ui-btn-left">
+					Back to main
+				</a>
+				<h1>
+					GPS Status
+				</h1>
+				<a href="#settingsDialog" data-role="button" data-rel="dialog" data-icon="gear" class="ui-btn-right">
+					Settings
+				</a>
+			</header>
+			<div class="content" data-role="content">
+				<div id="trackerStatus">
+					<div class="ui-grid-a">
+						<div class="ui-block-a">Latitude</div><div class="ui-block-b" id="statusLatitude"></div>
+						<div class="ui-block-a">Longitude</div><div class="ui-block-b" id="statusLongitude"></div>
+						<div class="ui-block-a">Accuracy</div><div class="ui-block-b" id="statusAccuracy"></div>
+						<div class="ui-block-a">Altitude</div><div class="ui-block-b" id="statusAltitude"></div>
+						<div class="ui-block-a">Altitude acc</div><div class="ui-block-b" id="statusAltitudeAccuracy"></div>
+						<div class="ui-block-a">Speed</div><div class="ui-block-b" id="statusSpeed"></div>
+						<div class="ui-block-a">Heading</div><div class="ui-block-b" id="statusHeading"></div>
+					</div>
+				</div>
 			</div>
-			<div id="coordsBox" data-role="collapsible" data-theme="a">
-				<h3>
-					Coordinates (debugging purposes)</h3>
-				<p id="coords">
+			<footer data-role="footer">
+				<h6>
+					&copy; Team 1
+				</h6>
+			</footer>
+		</div>
+	
+		<div id="settingsDialog" data-role="page" data-add-back-btn="true">
+			<header data-role="header">
+				<h1>Settings</h1>
+			</header>
+			<div class="content" data-role="content">
+				<p>
+					TODO: Change settings here
 				</p>
 			</div>
+			<footer data-role="footer">
+				<h6>
+					&copy; Team 1
+				</h6>
+			</footer>
 		</div>
-		<footer data-role="footer">
-			<h6>
-				&copy; Team 1
-			</h6>
-		</footer>
-	</div>
-	
-	<div id="settingsDialog" data-role="page" data-add-back-btn="true">
-		<header data-role="header">
-			<h1>Settings</h1>
-		</header>
-		<div class="content" data-role="content">
-			<p>
-				TODO: Change settings here
-			</p>
-		</div>
-		<footer data-role="footer">
-			<h6>
-				&copy; Team 1
-			</h6>
-		</footer>
-	</div>
-</body>
+	</body>
 </html>
