Some testing stuff

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,6 +10,8 @@
 		<script type="text/javascript" src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.js"></script>
 		<script type="text/javascript" src="tracker.js"></script>
 		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+		<script type="text/javascript" src="jquery.jqplot.min.js"></script>
+		<script type="text/javascript" src="excanvas.min.js"></script>
 		<script type="text/javascript">
 			'use strict';
 
