--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,19 +3,22 @@
 	<head>
 		<title>GPS Tracker</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css"
-		      type="text/css" />
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" type="text/css" />
 		<link rel="stylesheet" href="tracker.css" type="text/css" />
+		<link rel="stylesheet" href="jquery.jqplot.min.css" type="text/css" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.js"></script>
 		<script type="text/javascript" src="tracker.js"></script>
 		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 		<script type="text/javascript" src="jquery.jqplot.min.js"></script>
-		<script type="text/javascript" src="excanvas.min.js"></script>
+		<!--<script type="text/javascript" src="excanvas.min.js"></script>-->
 		<script type="text/javascript">
 			'use strict';
 
+			var graphsInitialized = false;
+
 			function updateStatusPage(last) {
+				graphsInitialized = false;
 				var base = $('#trackerStatus');
 				base.find('#statusLatitude').html(last.coords.latitude);
 				base.find('#statusLongitude').html(last.coords.longitude);
@@ -25,9 +28,51 @@
 				base.find('#statusSpeed').html(last.coords.speed);
 				base.find('#statusHeading').html(last.coords.heading);
 			}
+			
+			function createGraphs() {
+				if (!graphsInitialized)
+				{
+					$('#distancePlot').empty();
+					$('#speedPlot').empty();
+					var distanceData = tracker.getPlottableCoordinates(0, 'distance');
+					if (distanceData.length > 0)
+					{
+						var plotDistance = $.jqplot('distancePlot', [distanceData], {
+							title: 'Distance (km)',
+							series: [{ showMarker: false}],
+							axes: {
+								xaxis: {
+									label: 'Time (min)',
+									min: 0
+								}
+							}
+						});
+					} else
+					{
+						$('#distancePlot').html('No data to show yet.');
+					}
+
+					var speedData = tracker.getPlottableCoordinates(0, 'speed');
+					if (speedData.length > 0)
+					{
+						var plotSpeed = $.jqplot('speedPlot', [speedData], {
+							title: 'Speed (km/h)',
+							series: [{ showMarker: false}],
+							axes: {
+								xaxis: {
+									label: 'Time (min)',
+									min: 0
+								}
+							}
+						});
+					}
+					graphsInitialized = true;
+				}
+			}
 
 			$(document).ready(function () {
-				try {
+				try
+				{
 					window.tracker.initializeMap("map_canvas", 60.186652, 24.82187,
 						{
 							statusCallback: updateStatusPage,
@@ -38,7 +83,8 @@
 								strokeWeight: 6
 							}
 						});
-				} catch (err) {
+				} catch (err)
+				{
 					window.alert('Error on init: ' + err.message); // Windows Phone Emulator JavaScript doesn't like tracker var...
 				}
 				$('#toggleTracking').click(function () {
@@ -47,6 +93,42 @@
 				$('#togggleTest').click(function () {
 					tracker.toggleTestDraw();
 				});
+
+				$(document).delegate("#graphs", "pageshow", createGraphs);
+				//				$(document).delegate("#graphs", "pagecreate", function () {
+				//					alert('pagecreate-event');
+				//				});
+				//				$(document).delegate("#graphs", "pageinit", function () {
+				//					alert('pageinit-event');
+				//				});
+				
+
+				//				var plotDistance = $.jqplot('distancePlot', [[1, 4], [2, 5], [4, 3], [7, 2]], {
+				//					// Give the plot a title.
+				//					title: 'Distance',
+				//					// You can specify options for all axes on the plot at once with
+				//					// the axesDefaults object.  Here, we're using a canvas renderer
+				//					// to draw the axis label which allows rotated text.
+				//					axesDefaults: {
+				//						labelRenderer: $.jqplot.CanvasAxisLabelRenderer
+				//					},
+				//					// An axes object holds options for all axes.
+				//					// Allowable axes are xaxis, x2axis, yaxis, y2axis, y3axis, ...
+				//					// Up to 9 y axes are supported.
+				//					axes: {
+				//						// options for each axis are specified in seperate option objects.
+				//						xaxis: {
+				//							label: "Time",
+				//							// Turn off "padding".  This will allow data point to lie on the
+				//							// edges of the grid.  Default padding is 1.2 and will keep all
+				//							// points inside the bounds of the grid.
+				//							pad: 0
+				//						},
+				//						yaxis: {
+				//							label: "Distance"
+				//						}
+				//					}
+				//				});
 			});
 		</script>
 	</head>
@@ -66,7 +148,7 @@
 						<a href="#statusPage" data-role="button" data-transition="flip">Status</a>
 					</div>
 					<div class="ui-block-b">
-						<a href="#" data-role="button">Sth else</a>
+						<a href="#graphs" data-role="button">Graphs</a>
 					</div>
 				</div>
 				<div class="ui-grid-a">
@@ -90,6 +172,7 @@
 						<p id="coords"></p>
 					</div>
 				</div>
+				<div id="testPlot"></div>
 			</div>
 			<footer data-role="footer">
 				<h6>
@@ -97,6 +180,30 @@
 				</h6>
 			</footer>
 		</div>
+		
+		<div id="graphs" data-role="page" data-theme="b">
+			<header data-role="header">
+				<a href="#main" data-role="button" data-direction="reverse" class="ui-btn-left">
+					Back to main
+				</a>
+				<h1>
+					GPS Tracker - Graphs
+				</h1>
+				<a href="#settingsDialog" data-role="button" data-rel="dialog" data-icon="gear" class="ui-btn-right">
+					Settings
+				</a>
+			</header>
+			<div class="content" data-role="content">
+				<div id="distancePlot"></div>
+				<div id="speedPlot"></div>
+			</div>
+			<footer data-role="footer">
+				<h6>
+					&copy; Team 1
+				</h6>
+			</footer>
+		</div>
+		
 
 		<div id="statusPage" data-role="page" data-theme="b">
 			<header data-role="header">
