--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,24 +3,31 @@
 <head>
 	<title>GPS Tracker</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css"
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css"
 		type="text/css" />
 	<link rel="stylesheet" href="tracker.css" type="text/css" />
 	<link rel="stylesheet" href="jquery.jqplot.min.css" type="text/css" />
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.js"></script>
+	<script type="text/javascript" src="jquery-1.7.2.min.js"></script>
+	<script type="text/javascript">
+	$(document).bind("mobileinit", function () {
+			$.extend($.mobile, {
+				defaultPageTransition: 'none'
+//				ajaxEnabled: false
+//				pushStateEnabled: false
+//				domCache: false
+			});
+		});
+	</script>
+	<script type="text/javascript" src="jquery.mobile-1.1.0.min.js"></script>
 	<script type="text/javascript" src="tracker.js"></script>
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 	<script type="text/javascript" src="jquery.jqplot.min.js"></script>
 	<!--<script type="text/javascript" src="excanvas.min.js"></script>-->
 	<script type="text/javascript">
-		'use strict';
-
-		var graphsInitialized = false;
-
 		function updateStatusPage(last) {
-			graphsInitialized = false;
 			var base = $('#trackerStatus');
+			base.find('#statusTrackId').html(last.trackid);
+			base.find('#statusTrackEditable').html(last.trackiseditable ? "true" : "false");
 			base.find('#statusLatitude').html(last.coords.latitude);
 			base.find('#statusLongitude').html(last.coords.longitude);
 			base.find('#statusAccuracy').html(last.coords.accuracy);
@@ -30,45 +37,57 @@
 			base.find('#statusHeading').html(last.coords.heading);
 		}
 		function createGraphs() {
-			if (!graphsInitialized) {
-				$('#distancePlot').empty();
-				$('#speedPlot').empty();
-				var distanceData = tracker.getPlottableCoordinates(0, 'distance');
-				if (distanceData.length > 0) {
-					var plotDistance = $.jqplot('distancePlot', [distanceData], {
-						title: 'Distance (km)',
-						series: [{ showMarker: false }],
-						axes: {
-							xaxis: {
-								label: 'Time (min)',
-								min: 0
-							}
+			$('#distancePlot').empty();
+			$('#speedPlot').empty();
+			var distanceData = Tracker.getPlottableCoordinates(0, 'distance');
+			if (distanceData.length > 0) {
+				var plotDistance = $.jqplot('distancePlot', [distanceData], {
+					title: 'Distance (km)',
+					series: [{ showMarker: false }],
+					axes: {
+						xaxis: {
+							label: 'Time (min)',
+							min: 0
+						},
+						yaxis: {
+							min: 0
 						}
-					});
-				} else {
-					$('#distancePlot').html('No data to show yet.');
-				}
+					}
+				});
+			} else {
+				$('#distancePlot').html('No data to show yet.');
+			}
 
-				var speedData = tracker.getPlottableCoordinates(0, 'speed');
-				if (speedData.length > 0) {
-					var plotSpeed = $.jqplot('speedPlot', [speedData], {
-						title: 'Speed (km/h)',
-						series: [{ showMarker: false }],
-						axes: {
-							xaxis: {
-								label: 'Time (min)',
-								min: 0
-							}
+			var speedData = Tracker.getPlottableCoordinates(0, 'speed');
+			if (speedData.length > 0) {
+				var plotSpeed = $.jqplot('speedPlot', [speedData], {
+					title: 'Speed (km/h)',
+					series: [{ showMarker: false }],
+					axes: {
+						xaxis: {
+							label: 'Time (min)',
+							min: 0
+						},
+						yaxis: {
+							min: 0
 						}
-					});
-				}
-				graphsInitialized = true;
+					}
+				});
 			}
 		}
 
+		function addLoadTrackListeners() {
+			$('#savedTracksList .loadTrackLink').click(function () {
+				var trackid = $(this).attr('trackid');
+				Tracker.loadTrack(trackid);
+				$.mobile.changePage('#main');
+			});
+		}
+
 		$(document).ready(function () {
-			try {
-				window.tracker.initializeMap("map_canvas", 60.186652, 24.82187,
+			try
+			{
+				Tracker.initializeMap("map_canvas", 60.186652, 24.82187,
 					{
 						statusCallback: updateStatusPage,
 						debugCoordinates: $("#coords"),
@@ -78,190 +97,234 @@
 							strokeWeight: 6
 						}
 					});
-			} catch (err) {
+			} catch (err)
+			{
 				window.alert('Error on init: ' + err.message); // Windows Phone Emulator JavaScript doesn't like tracker var...
 			}
 			$('#toggleTracking').click(function () {
-				tracker.toggleTracking();
+				Tracker.toggleTracking();
 			});
 			$('#togggleTest').click(function () {
-				tracker.toggleTestDraw();
+				Tracker.toggleTestDraw();
+			});
+			$('#saveTrackBtn').click(function () {
+				if (Tracker.saveTrack()) {
+					alert('Track saved!');
+				}
 			});
 
 			$(document).delegate("#graphs", "pageshow", createGraphs);
-			//				$(document).delegate("#graphs", "pagecreate", function () {
-			//					alert('pagecreate-event');
-			//				});
-			//				$(document).delegate("#graphs", "pageinit", function () {
-			//					alert('pageinit-event');
-			//				});
+			$(document).delegate("#loadTrackDialog", "pageshow", function () {
+				var $tracksList = $('#savedTracksList');
+				$tracksList.empty();
+				var tracksString = Tracker.loadTrackList();
+				var tracks = $.parseJSON(tracksString);
+				tracks.push('testfoo');
+				tracks.push('testbar');
 
+				var trackLinkAttrs = {
+					'class': 'loadTrackLink',
+					'data-role': 'button'
+				};
 
-			//				var plotDistance = $.jqplot('distancePlot', [[1, 4], [2, 5], [4, 3], [7, 2]], {
-			//					// Give the plot a title.
-			//					title: 'Distance',
-			//					// You can specify options for all axes on the plot at once with
-			//					// the axesDefaults object.  Here, we're using a canvas renderer
-			//					// to draw the axis label which allows rotated text.
-			//					axesDefaults: {
-			//						labelRenderer: $.jqplot.CanvasAxisLabelRenderer
-			//					},
-			//					// An axes object holds options for all axes.
-			//					// Allowable axes are xaxis, x2axis, yaxis, y2axis, y3axis, ...
-			//					// Up to 9 y axes are supported.
-			//					axes: {
-			//						// options for each axis are specified in seperate option objects.
-			//						xaxis: {
-			//							label: "Time",
-			//							// Turn off "padding".  This will allow data point to lie on the
-			//							// edges of the grid.  Default padding is 1.2 and will keep all
-			//							// points inside the bounds of the grid.
-			//							pad: 0
-			//						},
-			//						yaxis: {
-			//							label: "Distance"
-			//						}
-			//					}
-			//				});
+				$.each(tracks, function (index, item) {
+					var link = $('<a/>', $.extend({
+						'trackid': item,
+						'html': item
+					}, trackLinkAttrs));
+					$tracksList.append(link).trigger('create');
+				});
+				addLoadTrackListeners();
+			});
 		});
 	</script>
 </head>
-<body>
-	<div id="main" data-role="page" data-theme="b">
-		<header data-role="header">
-			<h1>
-				GPS Tracker
-			</h1>
-			<a href="#settingsDialog" data-role="button" data-rel="dialog" data-icon="gear" class="ui-btn-right">
-				Settings </a>
-		</header>
-		<div class="content" data-role="content">
-			<div class="ui-grid-a">
-				<div class="ui-block-a">
-					<a href="#statusPage" data-role="button" data-transition="flip">Status</a>
+	<body>
+		<!-- Main -->
+		<div id="main" data-role="page" data-theme="b">
+			<header data-role="header">
+				<h1>
+					GPS Tracker
+				</h1>
+				<a href="#settingsDialog" data-role="button" data-rel="dialog" data-icon="gear" class="ui-btn-right">
+					Settings </a>
+			</header>
+			<div class="content" data-role="content">
+				<div class="ui-grid-b">
+					<div class="ui-block-a">
+						<a href="#statusPage" data-role="button" data-transition="flip">Status</a>
+					</div>
+					<div class="ui-block-b">
+						<a href="#graphs" data-role="button">Graphs</a>
+					</div>
+					<div class="ui-block-c">
+						<a id="saveTrackBtn" data-role="button">
+							Save
+						</a>
+					</div>
 				</div>
-				<div class="ui-block-b">
-					<a href="#graphs" data-role="button">Graphs</a>
+				<div class="ui-grid-b">
+					<div class="ui-block-a">
+						<a id="toggleTracking" href="#" data-role="button">Start/Stop</a>
+					</div>
+					<div class="ui-block-b">
+						<p id="trackingStatus" class="ui-corner-all">
+							Not tracking.
+						</p>
+					</div>
+					<div class="ui-block-c">
+						<a href="#loadTrackDialog" data-role="button">
+							Load
+						</a>
+					</div>
+				</div>
+				<div id="map_canvas">
+				</div>
+				<div id="coordsBox" data-role="collapsible" data-theme="a">
+					<h3>
+						Coordinates (testing purposes)
+					</h3>
+					<div>
+						<a id="togggleTest" data-role="button">Test route drawing (spiral)</a>
+						<p id="coords">
+						</p>
+					</div>
+				</div>
+				<div id="testPlot">
 				</div>
 			</div>
-			<div class="ui-grid-a">
-				<div class="ui-block-a">
-					<a id="toggleTracking" href="#" data-role="button">Start/Stop</a>
-				</div>
-				<div class="ui-block-b">
-					<p id="trackingStatus" class="ui-corner-all">
-						Not tracking.
-					</p>
-				</div>
-			</div>
-			<div id="map_canvas">
-			</div>
-			<div id="coordsBox" data-role="collapsible" data-theme="a">
-				<h3>
-					Coordinates (debugging purposes)
-				</h3>
-				<div>
-					<a id="togggleTest" data-role="button">Test route drawing (spiral)</a>
-					<p id="coords">
-					</p>
-				</div>
-			</div>
-			<div id="testPlot">
-			</div>
+			<footer data-role="footer">
+				<h6>
+					&copy; Team 1
+				</h6>
+			</footer>
 		</div>
-		<footer data-role="footer">
-			<h6>
-				&copy; Team 1
-			</h6>
-		</footer>
-	</div>
-	<div id="graphs" data-role="page" data-theme="b">
-		<header data-role="header">
-			<a href="#main" data-role="button" data-direction="reverse" class="ui-btn-left">Back
-				to main </a>
-			<h1>
-				GPS Tracker - Graphs
-			</h1>
-			<a href="#settingsDialog" data-role="button" data-rel="dialog" data-icon="gear" class="ui-btn-right">
-				Settings </a>
-		</header>
-		<div class="content" data-role="content">
-			<div id="distancePlot">
+	
+		<!-- Graphs -->
+		<div id="graphs" data-role="page" data-theme="b">
+			<header data-role="header">
+				<a href="#main" data-role="button" data-direction="reverse" class="ui-btn-left">Back
+					to main </a>
+				<h1>
+					Graphs
+				</h1>
+				<a href="#settingsDialog" data-role="button" data-rel="dialog" data-icon="gear" class="ui-btn-right">
+					Settings </a>
+			</header>
+			<div class="content" data-role="content">
+				<div id="distancePlot">
+				</div>
+				<div id="speedPlot">
+				</div>
 			</div>
-			<div id="speedPlot">
-			</div>
+			<footer data-role="footer">
+				<h6>
+					&copy; Team 1
+				</h6>
+			</footer>
 		</div>
-		<footer data-role="footer">
-			<h6>
-				&copy; Team 1
-			</h6>
-		</footer>
-	</div>
-	<div id="statusPage" data-role="page" data-theme="b">
-		<header data-role="header">
-			<a href="#main" data-role="button" data-direction="reverse" class="ui-btn-left">Back
-				to main </a>
-			<h1>
-				GPS Status
-			</h1>
-			<a href="#settingsDialog" data-role="button" data-rel="dialog" data-icon="gear" class="ui-btn-right">
-				Settings </a>
-		</header>
-		<div class="content" data-role="content">
-			<div id="trackerStatus">
-				<div class="ui-grid-a">
-					<div class="ui-block-a">
-						Latitude</div>
-					<div class="ui-block-b" id="statusLatitude">
-					</div>
-					<div class="ui-block-a">
-						Longitude</div>
-					<div class="ui-block-b" id="statusLongitude">
-					</div>
-					<div class="ui-block-a">
-						Accuracy</div>
-					<div class="ui-block-b" id="statusAccuracy">
-					</div>
-					<div class="ui-block-a">
-						Altitude</div>
-					<div class="ui-block-b" id="statusAltitude">
-					</div>
-					<div class="ui-block-a">
-						Altitude acc</div>
-					<div class="ui-block-b" id="statusAltitudeAccuracy">
-					</div>
-					<div class="ui-block-a">
-						Speed</div>
-					<div class="ui-block-b" id="statusSpeed">
-					</div>
-					<div class="ui-block-a">
-						Heading</div>
-					<div class="ui-block-b" id="statusHeading">
+	
+		<!-- Status -->
+		<div id="statusPage" data-role="page" data-theme="b">
+			<header data-role="header">
+				<a href="#main" data-role="button" data-direction="reverse" class="ui-btn-left">Back
+					to main </a>
+				<h1>
+					Status
+				</h1>
+				<a href="#settingsDialog" data-role="button" data-rel="dialog" data-icon="gear" class="ui-btn-right">
+					Settings </a>
+			</header>
+			<div class="content" data-role="content">
+				<div id="trackerStatus">
+					<div class="ui-grid-a">
+						<div class="ui-block-a">
+							Track's id
+						</div>
+						<div class="ui-block-b" id="statusTrackId">
+						</div>
+						<div class="ui-block-a">
+							Editable ?
+						</div>
+						<div class="ui-block-b" id="statusTrackEditable">
+						</div>
+						<!--
+							base.find('#statusTrackId').html(last.trackid);
+							base.find('#statusTrackEditable').html(last.trackiseditable);-->
+						<div class="ui-block-a">
+							Latitude</div>
+						<div class="ui-block-b" id="statusLatitude">
+						</div>
+						<div class="ui-block-a">
+							Longitude</div>
+						<div class="ui-block-b" id="statusLongitude">
+						</div>
+						<div class="ui-block-a">
+							Accuracy</div>
+						<div class="ui-block-b" id="statusAccuracy">
+						</div>
+						<div class="ui-block-a">
+							Altitude</div>
+						<div class="ui-block-b" id="statusAltitude">
+						</div>
+						<div class="ui-block-a">
+							Altitude acc</div>
+						<div class="ui-block-b" id="statusAltitudeAccuracy">
+						</div>
+						<div class="ui-block-a">
+							Speed</div>
+						<div class="ui-block-b" id="statusSpeed">
+						</div>
+						<div class="ui-block-a">
+							Heading</div>
+						<div class="ui-block-b" id="statusHeading">
+						</div>
 					</div>
 				</div>
 			</div>
+			<footer data-role="footer">
+				<h6>
+					&copy; Team 1
+				</h6>
+			</footer>
 		</div>
-		<footer data-role="footer">
-			<h6>
-				&copy; Team 1
-			</h6>
-		</footer>
-	</div>
-	<div id="settingsDialog" data-role="page" data-add-back-btn="true">
-		<header data-role="header">
-			<h1>
-				Settings</h1>
-		</header>
-		<div class="content" data-role="content">
-			<p>
-				TODO: Change settings here
-			</p>
+	
+		<!-- Load track -->
+		<div id="loadTrackDialog" data-role="page" data-add-back-btn="true">
+			<header data-role="header">
+				<h1>
+					Load track
+				</h1>
+			</header>
+			<div class="content" data-role="content">
+				<div id="savedTracksList">
+				
+				</div>
+			</div>
+			<footer data-role="footer">
+				<h6>
+					&copy; Team 1
+				</h6>
+			</footer>
 		</div>
-		<footer data-role="footer">
-			<h6>
-				&copy; Team 1
-			</h6>
-		</footer>
-	</div>
-</body>
+
+		<!-- Settings -->
+		<div id="settingsDialog" data-role="page" data-add-back-btn="true">
+			<header data-role="header">
+				<h1>
+					Settings
+				</h1>
+			</header>
+			<div class="content" data-role="content">
+				<p>
+					TODO: Change settings here
+				</p>
+			</div>
+			<footer data-role="footer">
+				<h6>
+					&copy; Team 1
+				</h6>
+			</footer>
+		</div>
+	</body>
 </html>
