--- a/server/public/systemtest.html
+++ b/server/public/systemtest.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.css" type="text/css" />
 		<link rel="stylesheet" href="tracker.css" type="text/css" />
-		<script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
+		<script type="text/javascript" src="jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.js"></script>
 		<script type="text/javascript" src="api/gps.js"></script>
 		<script type="text/javascript" src="api/track.js"></script>
